--- a/app/src/main/res/layout/detail_page.xml
+++ b/app/src/main/res/layout/detail_page.xml
@@ -9,10 +9,14 @@
             type="com.example.e_savari.model.ProductModel" />
     </data>
 
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp"
         android:background="@color/white">
 
     <com.facebook.shimmer.ShimmerFrameLayout
@@ -22,7 +26,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_margin="10dp">
+        android:layout_margin="20dp">
         <include layout="@layout/detail_page_shimmer"/>
     </com.facebook.shimmer.ShimmerFrameLayout>
 
@@ -32,6 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:context=".MainActivity">
@@ -39,7 +44,8 @@
         <include
             android:id="@+id/toolbar"
             layout="@layout/custom_toolbar"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/card1"/>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card1"
@@ -49,8 +55,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@id/reviews"
             app:cardCornerRadius="4dp"
-            android:padding="5dp"
-            android:layout_margin="10dp"
+            android:layout_margin="16dp"
             app:cardElevation="5dp"
             app:cardBackgroundColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent">
@@ -62,13 +67,14 @@
 
                 <ImageView
                     android:id="@+id/product_image"
-                    android:layout_width="250dp"
-                    android:layout_height="250dp"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
                     android:textSize="22sp"
                     android:textAlignment="center"
                     android:layout_marginBottom="10dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/productPrice"
                     app:imageUrl="@{product.images.get(0)}"
                     android:textColor="@android:color/black" />
 
@@ -194,6 +200,7 @@
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
                         android:padding="5dp"
                         >
                     <TextView
@@ -235,8 +242,8 @@
             android:layout_height="wrap_content"
             android:text="Reviews"
             android:textSize="18sp"
-            android:textStyle="bold"
             android:layout_margin="10dp"
+            android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/card1"
             app:layout_constraintStart_toStartOf="@id/card1"
             android:textColor="#8A9A5B" />
@@ -245,9 +252,13 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/review_list"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="20dp"
+            app:layout_constraintVertical_bias="0"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/reviews"
             app:layout_constraintStart_toStartOf="parent"
@@ -256,4 +267,5 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 </layout>
